make sure dataset list legend popover attaches to body and set z-index correctly

--- a/org/bccvl/theme/theme/html/css/general.css
+++ b/org/bccvl/theme/theme/html/css/general.css
@@ -2490,3 +2490,7 @@ form.plone-to-bootstrap-form .widget label span {
 .popover h3 {
     font-size:1.2em;
 }
+
+.popover {
+    z-index: 1050;
+}
